# Triangles

./: CMakeLists.txt  General.cpp  General.h  GeometryHelp.cpp  GeometryHelp.h  Line.cpp  Line.h  Plane.cpp  Plane.h  Vector3.cpp  Vector3.h  VitalyZ_General.cpp  VitalyZ_General.h  VitalyZ_GeometryHelp.cpp  VitalyZ_GeometryHelp.h  VitalyZ_Line.cpp  VitalyZ_Line.h  VitalyZ_Plane.cpp  VitalyZ_Plane.h  VitalyZ_Vector3.cpp  VitalyZ_Vector3.h  main.cpp
